fix(issue#4362) no spacing regression for function (#4363)
* Fixes #4362 which is a regression introduced by an attempt to create improved and generalized function parsing. Set the no spacing flag for comma separated lists and add test.

--- a/packages/test-data/less/_main/media.less
+++ b/packages/test-data/less/_main/media.less
@@ -291,3 +291,9 @@
     }
   }
 }
+
+@media print, (max-width: 992px) {
+    div {
+        color: red;
+    }
+}
